--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
 <h2 style="background-color: darkred; font-size: 40px; border: 5px black solid; width: 300px; height: 50px; text-align: center; border-radius: 10px">Title</h2>
 <h2 style="background-color: darkred; font-size: 40px; border: 5px black solid; width: 300px; height: 50px; text-align: center; border-radius: 10px">Title</h2>
 <h2 style="background-color: darkred; font-size: 40px; border: 5px black solid; width: 300px; height: 50px; text-align: center; border-radius: 10px">Title</h2>
+<h2 style="background-color: darkred; font-size: 40px; border: 5px black solid; width: 300px; height: 50px; text-align: center; border-radius: 10px">Title</h2>
 
 
 </body>
